--- a/src/app/temp-form/temp-form.component.html
+++ b/src/app/temp-form/temp-form.component.html
@@ -1,4 +1,5 @@
 <!-- <h1>template driven form</h1> -->
+<h1>Git Pratice</h1>
 
 <!-- <form name="myForm" #frm = "ngForm" (ngSubmit)="onSubmitForm(frm)">
     <div class="form-group">
